# extract

./: .directory  CMakeLists.txt  README.md
po/: POTFILES.in
script/: extract.1
src/: extract.cpp  extract.hpp  main.cpp
